Refactored role for post creation, endpoint for current user and CORS .